libkcompactdisc (4:4.10.2-3) UNRELEASED; urgency=low


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 09 Apr 2013 10:27:24 +0200

libkcompactdisc (4:4.10.2-2) experimental; urgency=low

  [ Pino Toscano ]
  * Backport upstream commit 4d7f2c572dec110ea71eae95f203e057cb4e41e3 to
    disable wmlib on GNU/Hurd.
  * Remove an extra include in plat_freebsd.c, which should make libkcompactdisc
    compile on GNU/kFreeBSD; patch kfreebsd_extra_include.diff.
  * Update the symbols file for GNU/kFreeBSD and GNU/Hurd.

 -- Sune Vuorela <sune@debian.org>  Mon, 08 Apr 2013 19:21:22 +0000

libkcompactdisc (4:4.10.2-1) experimental; urgency=low

  [ Pino Toscano ]
  * Initial packaging.

 -- Sune Vuorela <sune@debian.org>  Fri, 05 Apr 2013 21:57:29 +0000